<resources>
    <string name="app_name">AssMobro1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kelas_d3if_4202">Kelas: D3IF 4202</string>
    <string name="nim_6706184135">NIM: 6706184135</string>
    <string name="nama_yolanda">Nama: Yolanda</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="segitiga">Segitiga</string>
    <string name="masukkan_panjang">Masukkan Panjang</string>
    <string name="masukkan_lebar">Masukkan Lebar</string>
    <string name="hitung">Hitung</string>
    <string name="luas">Luas :</string>
    <string name="_00">00</string>
    <string name="keliling">Keliling :</string>
    <string name="share">Share</string>
    <string name="share_hasil">Share Hasil</string>
    <string name="_000">000</string>
    <string name="keliling_segitiga">Keliling Segitiga:</string>
    <string name="_0001">000</string>
    <string name="luas_segitiga">Luas Segitiga :</string>
    <string name="hitung_luas">Hitung Luas</string>
    <string name="masukkan_tinggi">Masukkan Tinggi</string>
    <string name="masukkan_alas">Masukkan Alas:</string>
    <string name="about">about</string>
</resources>
