<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/panjang_persegi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:layout_marginTop="79dp"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="607dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/masukkan_panjang"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/lebar_persegi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="136dp"
            android:layout_marginBottom="505dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/masukkan_lebar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/panjang_persegi" />

        <Button
            android:id="@+id/hitung_persegi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="251dp"
            android:layout_marginBottom="401dp"
            android:text="@string/hitung"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lebar_persegi" />

        <TextView
            android:id="@+id/luas1_persegi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="311dp"
            android:layout_marginBottom="332dp"
            android:text="@string/luas"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hitung_persegi" />

        <TextView
            android:id="@+id/hasilLuas1_persegi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="212dp"
            android:layout_marginBottom="332dp"
            android:text="@string/_00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/luas1_persegi"
            app:layout_constraintTop_toBottomOf="@+id/hitung_persegi" />

        <TextView
            android:id="@+id/keliling1_persegi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="296dp"
            android:layout_marginBottom="264dp"
            android:text="@string/keliling"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/luas1_persegi" />

        <TextView
            android:id="@+id/hasilKeliling1_persegi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="198dp"
            android:layout_marginBottom="250dp"
            android:text="@string/_00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/keliling1_persegi"
            app:layout_constraintTop_toBottomOf="@+id/hasilLuas1_persegi" />

        <Button
            android:id="@+id/share_persegi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="257dp"
            android:layout_marginBottom="158dp"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keliling1_persegi" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>